# helpscout-zendesk-migrator

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python.yml
samples/: sample_conversation.json  sample_threads.json  users.csv
src/: checkpoint.py  config.py  helpscout.py  main.py  migration.py  models.py  utils.py  zendesk.py
tests/: test_checkpoint.py  test_migration.py  test_models.py  test_utils.py
